--- a/openmrs/apps/customDisplayControl/views/order-print.html
+++ b/openmrs/apps/customDisplayControl/views/order-print.html
@@ -4,7 +4,7 @@
         <div ng-repeat="order in visit.orders">
             <h3>{{ order.orderName }}</h3>
             <p>{{ order.orderDetails }}</p>
-            <button ng-click="printOrder(order)">Imprimir Orden</button>
+            <button ng-click="printOrder(order)">*Imprimir Orden*</button>
         </div>
     </section>
 </div>
