--- a/openmrs/apps/customDisplayControl/views/holaMundo.html
+++ b/openmrs/apps/customDisplayControl/views/holaMundo.html
@@ -1,5 +1,3 @@
-<div>
-    <section class="dashboard-section">
+<section class="app-dashboard-integration">
        Hola Mundo!!!
-    </section>
-</div>
+</section>
