--- a/openmrs/apps/customDisplayControl/views/holaMundo.html
+++ b/openmrs/apps/customDisplayControl/views/holaMundo.html
@@ -1,3 +1,4 @@
 <section class="app-dashboard-integration">
-       Hola Mundo!!!
+       <h2 class="section-title">Hola Mundo!!! {{ section.title }}</h2>
+       Lorem ipsum dolor sit amet consectetur adipiscing elit malesuada aenean leo sagittis lacus nisi vitae feugiat, ut inceptos eu euismod pulvinar ultricies volutpat mollis primis quam conubia phasellus nascetur cras.
 </section>
