--- a/openmrs/apps/customDisplayControl/views/notificacionGES.html
+++ b/openmrs/apps/customDisplayControl/views/notificacionGES.html
@@ -20,7 +20,7 @@
                             <td ng-if="notificacion.estado == 'D'">Descartada</td>
                             <td ng-if="notificacion.estado == 'P'">
                                    <button onclick="window.open('http://localhost/formularioges', '_blank')">Notificar</button>
-                                   <button ng-click="descartarNotificacion()">Descartar</button>
+                                   <button ng-click="descartarNotificacion({{ notificacion.id }})">Descartar</button>
                             </td>
                             <td ng-if="notificacion.estado == 'N'">
                                    <button onclick="window.open('http://localhost/formularioges', '_blank')">Ver</button>
